--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Thumbs.db
 # Dataconnect-generated (assuming it's auto-generated)
 dataconnect-generated/
 
+backend/firebase/firebase-service-account.json
