--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@google-cloud/vision": "^4.3.2",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.85.2",
     "react-router-dom": "^7.1.5",
+    "serpapi": "^2.1.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
