Ignore node_modules and package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ dataconnect-generated/
 
 backend/firebase/firebase-service-account.json
 .lsp/.cache/db.transit.json
+node_modules/
+package-lock.json
