--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ package-lock.json
 frontend/node_modules/
 package-lock.json
 backend/firebase/firebase-service-account.json
+frontend/node_modules/.cache/default-development/index.pack.old
+frontend/node_modules/.cache/default-development/index.pack
+frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/.eslintcache
