--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "handyman-app",
   "version": "1.0.0",
+  "proxy" : "http://localhost:5000" ,
   "description": "Software Dev II project",
   "main": "server.js",
   "scripts": {
